--- a/templates/default/sugarcrm.conf.erb
+++ b/templates/default/sugarcrm.conf.erb
@@ -1,17 +1,25 @@
 <VirtualHost *:80>
-    ServerAdmin webmaster@localhost
-    ServerName sugarcrm.example.com
-    ErrorLog /var/log/apache2/sugarcrm_error_log
 
-    DocumentRoot /sugarcrm/
-    <Directory />
-        Options FollowSymLinks
-        AllowOverride all
-    </Directory>
-    <Directory /sugarcrm/>
-        Options Indexes FollowSymLinks MultiViews
-        AllowOverride all
-        Order allow,deny
-        allow from localhost
-    </Directory>
+<VirtualHost *>
+#ServerName sugarcrm.domain.co.uk
+DirectoryIndex index.html index.htm index.php
+ErrorLog /var/log/apache2/sugarcrm_error_log
+DocumentRoot /sugarcrm
+
+<Directory />
+	AllowOverride All
+	Require all granted
+</Directory>
+
+<Directory /sugarcrm/>
+    Options Indexes FollowSymLinks MultiViews
+    AllowOverride all
+    Require all denied
+</Directory>
+    
 </VirtualHost>
+
+
+
+
+
